fixed footer alignment

--- a/Frontend/HomeHunter.css
+++ b/Frontend/HomeHunter.css
@@ -900,7 +900,7 @@ margin-bottom: 1px;
         width: 1000px;
     }
     .footer-col {
-        width:330px;
+        width:490px;
     }
     #content-priceplan{
         height:310px;
